* don't force page break after TOC with automatic placement in article if `title-page` attribute is set and value of `toc-break-after` theme key is `auto` (#1768)

Bug Fixes::

* fix crash when border color is transparent (thematic_break_border_color, admonition_column_rule, quote_border_color, verse_border_color)

== 2.1.2 (2022-06-17) - @mojavelinux

Bug Fixes::

* apply page layout from main document to new page in scratch document (#2248)
* use correct logic to insert page before TOC with automatic placement when doctype=book and media=prepress
* use `get_entries_for_toc` to determine if the TOC is non-empty rather than `Document#sections?`

=== Details

{url-repo}/releases/tag/v2.1.2[git tag] | {url-repo}/compare/v2.1.1\...v2.1.2[full diff]

== 2.1.1 (2022-06-15) - @mojavelinux

Improvements::

* store zero-based column on Extent for extensions to use to position cursor at start of extent

Bug Fixes::

* place block image in SVG format in correct column when align is left and page columns are enabled (#2241)
* accurately trap LoadError from CodeRay if source language is not recognized on code block
* only draw rounded rectangle around phrase if `border-radius` is > 0
* use `base-border-color` value if border width is set on role for inline phrase but not border color

=== Details

{url-repo}/releases/tag/v2.1.1[git tag] | {url-repo}/compare/v2.1.0\...v2.1.1[full diff]

== 2.1.0 (2022-06-11) - @mojavelinux

Enhancements::

* arrange body of article or manpage doctype into multiple columns if `page-columns` key is set in theme (#327)
* allow column gap to be specified using `page-column-gap` key (#327)
* introduce `convert_index_categories` method to handle rendering of categories for index inside column box (#327)
* rename `convert_index_list` method to `convert_index_term` to make its purpose more clear (#327)
* add `save_theme` helper to work with a copy of the theme within a scope (#2196)