@@ -924,6 +924,7 @@ module Asciidoctor
       def import_page file, options = {}
         prev_page_layout = page.layout
         prev_page_size = page.size
+        prev_page_margin = page_margin
         state.compress = false if state.compress # can't use compression if using template
         prev_text_rendering_mode = (defined? @text_rendering_mode) ? @text_rendering_mode : nil
         delete_current_page if options[:replace]
@@ -936,11 +937,11 @@ module Asciidoctor
           # NOTE: set page size & layout explicitly in case imported page differs
           # I'm not sure it's right to start a new page here, but unfortunately there's no other
           # way atm to prevent the size & layout of the imported page from affecting subsequent pages
-          advance_page size: prev_page_size, layout: prev_page_layout if options.fetch :advance, true
+          advance_page layout: prev_page_layout, margin: prev_page_margin, size: prev_page_size if options.fetch :advance, true
         elsif options.fetch :advance_if_missing, true
           delete_current_page
           # NOTE: see previous comment
-          advance_page size: prev_page_size, layout: prev_page_layout
+          advance_page layout: prev_page_layout, margin: prev_page_margin, size: prev_page_size
         else
           delete_current_page
         end
