@@ -16,6 +16,7 @@ Enhancements::
 Bug Fixes::
 
 * fix crash when border color is transparent (thematic_break_border_color, admonition_column_rule, quote_border_color, verse_border_color)
+* verify page margin is restored after imported page
 
 == 2.1.2 (2022-06-17) - @mojavelinux
 
